--- a/package.json
+++ b/package.json
@@ -7,9 +7,13 @@
   },
   "author": "",
   "license": "ISC",
-  "description": "",
   "devDependencies": {
-    "daisyui": "^4.4.24",
-    "tailwindcss": "^3.4.0"
+    "daisyui": "^4.5.0",
+    "tailwindcss": "^3.4.1"
+  },
+  "keywords": [],
+  "description": "",
+  "dependencies": {
+    "@tailwindcss/typography": "^0.5.10"
   }
 }
